tests/compile_errors/010-multiple-location.buzz
// Property `name` does not exists
import "errors";

object Some {
    msg: str,
}

test "Badly initializing an object declared in another file" {
    var _ = errors\CompileError{
        name = "wtf",
    };
}
